## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	test_win32_pavuk1a.bat \
	test_win32_pavuk2a.bat \
	test_win32_pavuk3a.bat \
	test_win32_pavuk4a.bat \
	test_win32_pavuk7a.bat \
	test_win32_pavuk8a.bat \
	test_win32_pavuk1b.bat \
	test_win32_pavuk2b.bat \
	test_win32_pavuk8b.bat \
	test_url_pat1.bat \
	test_unix_pavuk1a.sh \
	test_unix_pavuk2a.sh \
	test_unix_pavuk3a.sh \
	test_unix_pavuk4a.sh \
	test_unix_pavuk5a.sh \
	test_unix_pavuk1b.sh \
	test_unix_pavuk6.sh \
	test_unix_pavuk7a.sh \
	TestScenario1b.txt \
	TestScenario1c.txt \
	TestScenario2a.txt \
	TestScenario2b.txt \
	TestScenario4a.txt

DISTCLEANFILES = 
CLEANFILES = *~ *.bak


